// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch component renders a Switch in "on" state 1`] = `
@media  {
  .c-gazWjm {
    -webkit-appearance: none;
    appearance: none;
    background-color: var(--colors-tonal400);
    border: none;
    padding: var(--space-0);
    overflow: hidden;
    border-radius: var(--radii-round);
    cursor: pointer;
    display: inline-flex;
    width: var(--sizes-4);
    position: relative;
    transition: background-color 100ms ease;
  }

  .c-gazWjm:focus {
    outline: none;
  }

  .c-gazWjm[data-state="checked"] {
    background-color: var(--colors-success);
  }

  .c-fEwLYW {
    display: block;
    height: var(--sizes-2);
    width: var(--sizes-2);
    background-color: white;
    border-radius: var(--radii-round);
    transition: transform 100ms;
    will-change: transform;
  }

  .c-fEwLYW[data-state="checked"] {
    transform: translateX(calc(var(--sizes-2) - var(--space-1)));
  }
}

<div>
  <input
    checked=""
    hidden=""
    type="checkbox"
    value="on"
  />
  <button
    aria-checked="true"
    class="c-gazWjm"
    data-state="checked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="c-fEwLYW"
      data-state="checked"
    />
  </button>
</div>
`;

exports[`Switch component renders a disabled switch 1`] = `
@media  {
  .c-gazWjm {
    -webkit-appearance: none;
    appearance: none;
    background-color: var(--colors-tonal400);
    border: none;
    padding: var(--space-0);
    overflow: hidden;
    border-radius: var(--radii-round);
    cursor: pointer;
    display: inline-flex;
    width: var(--sizes-4);
    position: relative;
    transition: background-color 100ms ease;
  }

  .c-gazWjm:focus {
    outline: none;
  }

  .c-gazWjm[data-state="checked"] {
    background-color: var(--colors-success);
  }

  .c-fEwLYW {
    display: block;
    height: var(--sizes-2);
    width: var(--sizes-2);
    background-color: white;
    border-radius: var(--radii-round);
    transition: transform 100ms;
    will-change: transform;
  }

  .c-fEwLYW[data-state="checked"] {
    transform: translateX(calc(var(--sizes-2) - var(--space-1)));
  }
}

<div>
  <input
    disabled=""
    hidden=""
    type="checkbox"
    value="on"
  />
  <button
    aria-checked="false"
    class="c-gazWjm"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="c-fEwLYW"
      data-disabled=""
      data-state="unchecked"
    />
  </button>
</div>
`;

exports[`Switch component renders a switch 1`] = `
@media  {
  .c-gazWjm {
    -webkit-appearance: none;
    appearance: none;
    background-color: var(--colors-tonal400);
    border: none;
    padding: var(--space-0);
    overflow: hidden;
    border-radius: var(--radii-round);
    cursor: pointer;
    display: inline-flex;
    width: var(--sizes-4);
    position: relative;
    transition: background-color 100ms ease;
  }

  .c-gazWjm:focus {
    outline: none;
  }

  .c-gazWjm[data-state="checked"] {
    background-color: var(--colors-success);
  }

  .c-fEwLYW {
    display: block;
    height: var(--sizes-2);
    width: var(--sizes-2);
    background-color: white;
    border-radius: var(--radii-round);
    transition: transform 100ms;
    will-change: transform;
  }

  .c-fEwLYW[data-state="checked"] {
    transform: translateX(calc(var(--sizes-2) - var(--space-1)));
  }
}

<div>
  <input
    hidden=""
    type="checkbox"
    value="on"
  />
  <button
    aria-checked="false"
    class="c-gazWjm"
    data-state="unchecked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="c-fEwLYW"
      data-state="unchecked"
    />
  </button>
</div>
`;
